--- a/Lab3App/Lab3App.Application/Lab3App.Application.csproj
+++ b/Lab3App/Lab3App.Application/Lab3App.Application.csproj
@@ -8,9 +8,13 @@
 
     <ItemGroup>
       <Folder Include="Factories" />
-      <Folder Include="Interfaces" />
       <Folder Include="Models\CommandHandlers" />
       <Folder Include="Models\Validation" />
+      <Folder Include="Servicies" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Lab3App.Domain\Lab3App.Domain.csproj" />
     </ItemGroup>
 
 </Project>
