--- a/Lab3App/Lab3App.Application/Lab3App.Application.csproj
+++ b/Lab3App/Lab3App.Application/Lab3App.Application.csproj
@@ -8,13 +8,13 @@
 
     <ItemGroup>
       <Folder Include="Factories" />
-      <Folder Include="Models\CommandHandlers" />
       <Folder Include="Models\Validation" />
       <Folder Include="Servicies" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Lab3App.Domain\Lab3App.Domain.csproj" />
+      <ProjectReference Include="..\LabApp3.Infrastructure\LabApp3.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
